# sugar-wifi-conf

./: .gitignore  README.cn_zh.md  README.md  build-pi-image.sh  custom_config.json  index.js  install-bin.sh  install.sh  package-lock.json  package.json  run.sh  sugar-uuid.js  sugarwificonfig.sh  uninstall.sh  wificonfig.sh  wificonfig.sh.bak
.github/workflows/: build.yml  build_aarch64.yml  release.yml
ble-ssh-client/: Cargo.toml  Cross.toml  README.md  ble-ssh-speed-report.md
ble-ssh-client/cross/: Dockerfile
ble-ssh-client/src/: aliases.rs  app.rs  bench_speed.rs  ble.rs  main.rs  speed.rs  test_tunnel.rs  tunnel.rs  uuid.rs
characteristics/: custom-command.js  custom-info.js  device-model.js  devie-model.js  input-notify.js  ip-address.js  service-name.js  wifi-name.js
node/: config.js  install.sh
node/characteristics/: device-model.js  input-notify.js  service-name.js
node/template/: wpa_supplicant.conf
rust/: Cargo.toml  Cross.toml  install.sh  run.sh
rust/.cargo/: config.toml
rust/cross/: Dockerfile
rust/src/: cli.rs  config.rs  main.rs  uuid.rs
rust/src/ble/: custom_command.rs  custom_info.rs  device_model.rs  input_notify.rs  ip_address.rs  mod.rs  server.rs  service_name.rs  ssh_tunnel.rs  ssh_username.rs  wifi_name.rs
rust/src/wifi/: mod.rs  nm.rs  wpa.rs
sugar-wifi-miniapp/: README.md  app.json  project.config.json  project.private.config.json
sugar-wifi-miniapp/lib/: regenerator-runtime.js
sugar-wifi-miniapp/utils/: util.js
template/: output.conf  test.js  wpa_supplicant.conf
web-bluetooth-client/: README.md  index.html  package.json
web-bluetooth-client/config/: index.js
wechat-miniapp/: app.wxss  project.config.json
(+17 files in other folders)
