[package]
name = "ble-ssh"
version = "0.1.0"
edition = "2021"
description = "BLE SSH tunnel client for sugar-wifi-conf"

[[bin]]
name = "ble-ssh"
path = "src/main.rs"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
uuid = "1"
log = "0.4"
env_logger = "0.11"
crossterm = "0.28"
dialoguer = "0.11"
console = "0.15"
