[package]
name = "ble-ssh"
version = "0.2.0"
edition = "2021"
description = "BLE SSH tunnel client for sugar-wifi-conf (system tray app)"

[[bin]]
name = "ble-ssh"
path = "src/main.rs"

[[bin]]
name = "ble-ssh-test"
path = "src/test_tunnel.rs"

[[bin]]
name = "ble-ssh-bench"
path = "src/bench_speed.rs"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = "1"
log = "0.4"
env_logger = "0.11"
tray-icon = "0.22"
tao = "0.35"
ctrlc = { version = "3", features = ["termination"] }
once_cell = "1"
